bk_ida/gccida/g3/nonimmediate_operand
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonimmediate_operand/src/recog.c:1659:36: error: must use 'enum' tag to refer to type 'machine_mode'
int  nonimmediate_operand( rtx op, machine_mode mode) 
                                   ^
                                   enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonimmediate_operand/src/recog.c:1679:27: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( !( _BYTE)v5 && ( *( &mode_class_0 + ( int)mode) & 0xFFFFFFFD) != 1 ) 
                          ^~~~~~~~~~~~
                          mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonimmediate_operand/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonimmediate_operand/src/recog.c:1679:54: error: invalid operands to binary expression ('const enum mode_class [59]' and 'unsigned int')
if ( !( _BYTE)v5 && ( *( &mode_class_0 + ( int)mode) & 0xFFFFFFFD) != 1 ) 
                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonimmediate_operand/src/recog.c:1689:47: error: use of undeclared identifier 'machine_mode'
if ( trunc_int_for_mode( op->fld[0].rtwint, ( machine_mode)v2) != op->fld[0].rtwint ) 
                                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonimmediate_operand/src/recog.c:1728:12: error: expected identifier or '('
 struct op = op->fld[0].rtx; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonimmediate_operand/src/recog.c:1737:21: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( *( ( _DWORD *)&mode_class_0 + v5) == 2 && mode_size[v5] > mode_size[*( ( unsigned __int8 *)op + 2)] ) 
                    ^~~~~~~~~~~~
                    mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonimmediate_operand/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonimmediate_operand/src/recog.c:1753:31: error: use of undeclared identifier 'machine_mode'
if ( !legitimate_address_p( ( machine_mode)*( ( unsigned __int8 *)op + 2), rtx, 0) ) 
                              ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonimmediate_operand/src/obj/recog.o] Error 1
